src/raylib/RayLib3.pas


  // Check collision between two rectangles
  CheckCollisionRecs: function(rec1: TRectangle; rec2: TRectangle): Boolean; cdecl;
  // Check collision between two circles
  CheckCollisionCircles: function(center1: TVector2; radius1: Single; center2: TVector2; radius2: Single): Boolean; cdecl;
  // Check collision between circle and rectangle
  CheckCollisionCircleRec: function(center: TVector2; radius: Single; rec: TRectangle): Boolean; cdecl;
  // Check if point is inside rectangle
  CheckCollisionPointRec: function(point: TVector2; rec: TRectangle): Boolean; cdecl;
  // Check if point is inside circle
  CheckCollisionPointCircle: function(point: TVector2; center: TVector2; radius: Single): Boolean; cdecl;
  // Check if point is inside a triangle
  CheckCollisionPointTriangle: function(point: TVector2; p1: TVector2; p2: TVector2; p3: TVector2): Boolean; cdecl;
  // Check the collision between two lines defined by two points each, returns collision point by reference
  CheckCollisionLines: function(startPos1, endPos1, startPos2, endPos2: TVector2; collisionPoint: PVector2): Boolean; cdecl;
  // Get collision rectangle for two rectangles collision
  GetCollisionRec: function(rec1: TRectangle; rec2: TRectangle): TRectangle; cdecl;

//------------------------------------------------------------------------------------
// Texture Loading and Drawing Functions (Module: textures)
//------------------------------------------------------------------------------------

  { Image loading functions }
  // NOTE: This functions do not require GPU access

  // Load image from file into CPU memory (RAM)
  LoadImage: function(const fileName: PUTF8Char): TImage; cdecl;
  // Load image from RAW file data
  LoadImageRaw: function(const fileName: PUTF8Char; width: Integer; height: Integer; format: Integer; headerSize: Integer): TImage; cdecl;
  // Load image sequence from file (frames appended to image.data)
  LoadImageAnim: function(const fileName: PUTF8Char; frames: Integer): TImage; cdecl;
  // Load image from memory buffer, fileType refers to extension: i.e. "png"
  LoadImageFromMemory: function(const fileType: PUTF8Char; fileData: PByte; dataSize: Integer): TImage; cdecl;
  // Unload image from CPU memory (RAM)
  UnloadImage: procedure(image: TImage); cdecl;
  // Export image data to file
  ExportImage: procedure(image: TImage; const fileName: PUTF8Char); cdecl;
  // Export image as code file defining an array of bytes
  ExportImageAsCode: procedure(image: TImage; const fileName: PUTF8Char); cdecl;

  { Image generation functions }

  // Generate image: plain color
  GenImageColor: function(width: Integer; height: Integer; color: TColor): TImage; cdecl;
  // Generate image: vertical gradient
  GenImageGradientV: function(width: Integer; height: Integer; top: TColor; bottom: TColor): TImage; cdecl;
  // Generate image: horizontal gradient
  GenImageGradientH: function(width: Integer; height: Integer; left: TColor; right: TColor): TImage; cdecl;
  // Generate image: radial gradient
  GenImageGradientRadial: function(width: Integer; height: Integer; density: Single; inner: TColor; outer: TColor): TImage; cdecl;
  // Generate image: checked
  GenImageChecked: function(width: Integer; height: Integer; checksX: Integer; checksY: Integer; col1: TColor; col2: TColor): TImage; cdecl;
  // Generate image: white noise
  GenImageWhiteNoise: function(width: Integer; height: Integer; factor: Single): TImage; cdecl;
  // Generate image: perlin noise
  GenImagePerlinNoise: function(width: Integer; height: Integer; offsetX: Integer; offsetY: Integer; scale: Single): TImage; cdecl;
  // Generate image: cellular algorithm. Bigger tileSize means bigger cells
  GenImageCellular: function(width: Integer; height: Integer; tileSize: Integer): TImage; cdecl;

  { Image manipulation functions }

  // Create an image duplicate (useful for transformations)
  ImageCopy: function(image: TImage): TImage; cdecl;
  // Create an image from another image piece
  ImageFromImage: function(image: TImage; rec: TRectangle): TImage; cdecl;
  // Create an image from text (default font)
  ImageText: function(const text: PUTF8Char; fontSize: Integer; color: TColor): TImage; cdecl;
  // Create an image from text (custom sprite font)
  ImageTextEx: function(font: TFont; const text: PUTF8Char; fontSize: Single; spacing: Single; tint: TColor): TImage; cdecl;
  // Convert image to POT (power-of-two)
  ImageToPOT: procedure(image: PImage; fillColor: TColor); cdecl;
  // Convert image data to desired format
  ImageFormat: procedure(image: PImage; newFormat: Integer); cdecl;
  // Crop an image to a defined rectangle
  ImageCrop: procedure(image: PImage; crop: TRectangle); cdecl;
  // Crop image depending on alpha value
  ImageAlphaCrop: procedure(image: PImage; threshold: Single); cdecl;
  // Clear alpha channel to desired color
  ImageAlphaClear: procedure(image: PImage; color: TColor; threshold: Single); cdecl;
  // Apply alpha mask to image
  ImageAlphaMask: procedure(image: PImage; alphaMask: TImage); cdecl;
  // Premultiply alpha channel
  ImageAlphaPremultiply: procedure(image: PImage); cdecl;
  // Resize image (Bicubic scaling algorithm)
  ImageResize: procedure(image: PImage; newWidth: Integer; newHeight: Integer); cdecl;
  // Resize image (Nearest-Neighbor scaling algorithm)
  ImageResizeNN: procedure(image: PImage; newWidth: Integer; newHeight: Integer); cdecl;
  // Resize canvas and fill with color
  ImageResizeCanvas: procedure(image: PImage; newWidth: Integer; newHeight: Integer; offsetX: Integer; offsetY: Integer; color: TColor); cdecl;
  // Generate all mipmap levels for a provided image
  ImageMipmaps: procedure(image: PImage); cdecl;
  // Dither image data to 16bpp or lower (Floyd-Steinberg dithering)
  ImageDither: procedure(image: PImage; rBpp: Integer; gBpp: Integer; bBpp: Integer; aBpp: Integer); cdecl;
  // Flip image vertically
  ImageFlipVertical: procedure(image: PImage); cdecl;
  // Flip image horizontally
  ImageFlipHorizontal: procedure(image: PImage); cdecl;
  // Rotate image clockwise 90deg
  ImageRotateCW: procedure(image: PImage); cdecl;
  // Rotate image counter-clockwise 90deg
  ImageRotateCCW: procedure(image: PImage); cdecl;
  // Modify image color: tint
  ImageColorTint: procedure(image: PImage; color: TColor); cdecl;
  // Modify image color: invert
  ImageColorInvert: procedure(image: PImage); cdecl;
  // Modify image color: grayscale
  ImageColorGrayscale: procedure(image: PImage); cdecl;
  // Modify image color: contrast (-100 to 100)
  ImageColorContrast: procedure(image: PImage; contrast: Single); cdecl;
  // Modify image color: brightness (-255 to 255)
  ImageColorBrightness: procedure(image: PImage; brightness: Integer); cdecl;
  // Modify image color: replace color
  ImageColorReplace: procedure(image: PImage; color: TColor; replace: TColor); cdecl;
  // Get pixel data from image as a Color struct array
  LoadImageColors: function(image: TImage): PColor; cdecl;
  // Extract color palette from image to maximum size (memory should be freed)
  LoadImagePalette: function(image: TImage; maxPaletteSize: Integer; colorsCount: PInteger): PColor; cdecl;
  // Get image alpha border rectangle
  GetImageAlphaBorder: function(image: TImage; threshold: Single): TRectangle; cdecl;
  // Unload color data loaded with LoadImageColors()
  UnloadImageColors: procedure(Colors: PColor); cdecl;
  // Unload colors palette loaded with LoadImagePalette()
  UnloadImagePalette: procedure(Colors: PColor); cdecl;

  { Image drawing functions }
  // NOTE: Image software-rendering functions (CPU)

  // Clear image background with given color
  ImageClearBackground: procedure(dst: PImage; color: TColor); cdecl;
  // Draw pixel within an image
  ImageDrawPixel: procedure(dst: PImage; posX: Integer; posY: Integer; color: TColor); cdecl;
  // Draw pixel within an image (Vector version)
  ImageDrawPixelV: procedure(dst: PImage; position: TVector2; color: TColor); cdecl;
  // Draw line within an image
  ImageDrawLine: procedure(dst: PImage; startPosX: Integer; startPosY: Integer; endPosX: Integer; endPosY: Integer; color: TColor); cdecl;
  // Draw line within an image (Vector version)
  ImageDrawLineV: procedure(dst: PImage; start: TVector2; &end: TVector2; color: TColor); cdecl;
  // Draw circle within an image
  ImageDrawCircle: procedure(const dst: TImage; CenterX, CenterY, Radius: Integer; Color: TColor); cdecl;
  // Draw circle within an image (Vector version)
  ImageDrawCircleV: procedure(dst: PImage; center: TVector2; radius: Integer; color: TColor); cdecl;
  // Draw rectangle within an image
  ImageDrawRectangle: procedure(dst: PImage; posX: Integer; posY: Integer; width: Integer; height: Integer; color: TColor); cdecl;
  // Draw rectangle within an image (Vector version)
  ImageDrawRectangleV: procedure(dst: PImage; position: TVector2; size: TVector2; color: TColor); cdecl;
  // Draw rectangle within an image
  ImageDrawRectangleRec: procedure(dst: PImage; rec: TRectangle; color: TColor); cdecl;
  // Draw rectangle lines within an image
  ImageDrawRectangleLines: procedure(dst: PImage; rec: TRectangle; thick: Integer; color: TColor); cdecl;
  // Draw a source image within a destination image (tint applied to source)
  ImageDraw: procedure(dst: PImage; src: TImage; srcRec: TRectangle; dstRec: TRectangle; tint: TColor); cdecl;
  // Draw text (using default font) within an image (destination)
  ImageDrawText: procedure(dst: PImage; const text: PUTF8Char; posX, posY: Integer; fontSize: Integer; color: TColor); cdecl;
  // Draw text (custom sprite font) within an image (destination)
  ImageDrawTextEx: procedure(dst: PImage; font: TFont; const text: PUTF8Char; position: TVector2; fontSize: Single; spacing: Single; color: TColor); cdecl;

  { Texture loading functions }
  // NOTE: These functions require GPU access

  // Load texture from file into GPU memory (VRAM)
  LoadTexture: function(const fileName: PUTF8Char): TTexture2D; cdecl;
  // Load texture from image data
  LoadTextureFromImage: function(image: TImage): TTexture2D; cdecl;
  // Load cubemap from image, multiple image cubemap layouts supported
  LoadTextureCubemap: function(image: TImage; layoutType: Integer): TTextureCubemap; cdecl;
  // Load texture for rendering (framebuffer)
  LoadRenderTexture: function(width: Integer; height: Integer): TRenderTexture2D; cdecl;
  // Unload texture from GPU memory (VRAM)
  UnloadTexture: procedure(texture: TTexture2D); cdecl;
  // Unload render texture from GPU memory (VRAM)
  UnloadRenderTexture: procedure(target: TRenderTexture2D); cdecl;
  // Update GPU texture with new data
  UpdateTexture: procedure(texture: TTexture2D; const pixels: Pointer); cdecl;
  // Update GPU texture rectangle with new data
  UpdateTextureRec: procedure(texture: TTexture2D; rec: TRectangle; const pixels: Pointer); cdecl;
  // Get pixel data from GPU texture and return an Image
  GetTextureData: function(texture: TTexture2D): TImage; cdecl;
  // Get pixel data from screen buffer and return an Image (screenshot)
  GetScreenData: function: TImage; cdecl;

  { Texture configuration functions }

  // Generate GPU mipmaps for a texture
  GenTextureMipmaps: procedure(texture: PTexture2D); cdecl;
  // Set texture scaling filter mode
  SetTextureFilter: procedure(texture: TTexture2D; FilterMode: TTextureFilterMode); cdecl;
  // Set texture wrapping mode
  SetTextureWrap: procedure(texture: TTexture2D; wrapMode: Integer); cdecl;

  { Texture drawing functions }
